# ChargeInsight-App

./: .gitignore  README.md  build.gradle.kts  pyproject.toml  requirements.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/rozhak/sleepyphone/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rozhak/sleepyphone/: BlackScreenActivity.kt  MainActivity.kt  MonitoringService.kt  UsageTracker.kt
app/src/main/res/drawable/: ic_status_denied.xml  ic_status_granted.xml
app/src/main/res/layout/: activity_black_screen.xml  activity_main.xml  layout_black_overlay.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/rozhak/sleepyphone/: ExampleUnitTest.kt
chargeinsight/: main.py
chargeinsight/core/: battery_reader.py  confidence.py  health_model.py
chargeinsight/system/: windows_power.py
chargeinsight/ui/: main_window.py
gradle/wrapper/: gradle-wrapper.properties
